--- a/folioreader/res/values/colors.xml
+++ b/folioreader/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="white">#FFFFFF</color>
     <color name="underline">#F02814</color>
     <color name="grey_color">#a8a8a8</color>
+    <color name="afternoon">#DFDAD4</color>
 </resources>
